--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -1,13 +1,31 @@
+<!doctype html>
 <html>
 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>这个一个系统</title>
+    <meta name="description" content="这是一个 index 页面">
+    <meta name="keywords" content="index">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="icon" type="image/png" href="/app/assets/i/favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="/app/assets/i/app-icon72x72@2x.png">
+    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
+    <link rel="stylesheet" href="/app/assets/css/amazeui.min.css" />
+    <link rel="stylesheet" href="/app/assets/css/admin.css">
+    <link rel="stylesheet" href="/app/assets/css/app.css">
+</head>
+
 <body>
-    <header>AAA</header>
     <content>
-        {% block content %} 
-        {% endblock %}
+        {% block content %} {% endblock %}
     </content>
 
-    <footer>BBB</footer>
+    <script src="/app/assets/js/jquery.min.js"></script>
+    <script src="/app/assets/js/amazeui.min.js"></script>
+    <script src="/app/assets/js/app.js"></script>
 </body>
 
 </html>
