--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -4,28 +4,96 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>这个一个系统</title>
-    <meta name="description" content="这是一个 index 页面">
+    <title>KindsPlay</title>
+    <meta name="description" content="KindsPlay">
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="icon" type="image/png" href="/app/assets/i/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="/app/assets/i/app-icon72x72@2x.png">
-    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
+    <link rel="icon" type="image/png" href="/app/assets/i/moon_32px_1206584_easyicon.net.png">
+    <link rel="apple-touch-icon-precomposed" href="/app/assets/i/moon_72px_1206584_easyicon.net.png">
+    <meta name="apple-mobile-web-app-title" content="KindsPlay" />
     <link rel="stylesheet" href="/app/assets/css/amazeui.min.css" />
     <link rel="stylesheet" href="/app/assets/css/admin.css">
     <link rel="stylesheet" href="/app/assets/css/app.css">
+    <script src="/app/assets/js/echarts.min.js "></script>
 </head>
 
-<body>
-    <content>
-        {% block content %} {% endblock %}
-    </content>
+<body data-type="index ">
 
-    <script src="/app/assets/js/jquery.min.js"></script>
-    <script src="/app/assets/js/amazeui.min.js"></script>
-    <script src="/app/assets/js/app.js"></script>
+
+    <header class="am-topbar am-topbar-inverse admin-header ">
+        <div class="am-topbar-brand ">
+            <a class="tpl-logo">
+                <span>
+                    <img src="/app/assets/i/moon_72px_1206584_easyicon.net.png">
+                </span>
+                <span>
+                     Kinds Play
+                </span>
+            </a>
+
+        </div>
+        <div class="am-icon-list tpl-header-nav-hover-ico am-fl am-margin-right ">
+
+        </div>
+
+        <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only
+        " data-am-collapse="{target: '#topbar-collapse'} "><span class="am-sr-only ">导航切换</span> <span class="am-icon-bars "></span></button>
+
+        <div class="am-collapse am-topbar-collapse " id="topbar-collapse ">
+
+            <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right admin-header-list tpl-header-list ">
+
+                <li class="am-dropdown " data-am-dropdown data-am-dropdown-toggle>
+                    <a class="am-dropdown-toggle tpl-header-list-link " href="javascript:; ">
+                        <span class="tpl-header-list-user-nick ">禁言小张</span>
+                        <span class="tpl-header-list-user-ico ">
+                             <img src="/app/assets/img/user01.png ">
+                          </span>
+                    </a>
+                    <ul class="am-dropdown-content ">
+                        <li><a href="# "><span class="am-icon-bell-o "></span> 资料</a></li>
+                        <li><a href="# "><span class="am-icon-cog "></span> 设置</a></li>
+                        <li><a href="# "><span class="am-icon-power-off "></span> 退出</a></li>
+                    </ul>
+                </li>
+                <li><a href="### " class="tpl-header-list-link "><span class="am-icon-sign-out tpl-header-list-ico-out-size "></span></a></li>
+            </ul>
+        </div>
+    </header>
+    <div class="tpl-page-container tpl-page-header-fixed">
+
+        <div class="tpl-left-nav tpl-left-nav-hover">
+            <div class="tpl-left-nav-title">
+                KindsPlay列表
+            </div>
+            <div class="tpl-left-nav-list">
+                <ul class="tpl-left-nav-menu">
+                    <li class="tpl-left-nav-item">
+                        <a href="/index/index" class="nav-link active">
+                            <i class="am-icon-home"></i>
+                            <span>相册</span>
+                        </a>
+                    </li>
+                    <li class="tpl-left-nav-item">
+                        <a href="/index/index" class="nav-link active">
+                            <i class="am-icon-home"></i>
+                            <span>我的相册</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <content>
+            {% block content %} {% endblock %}
+        </content>
+    </div>
+
+    <script src="/app/assets/js/jquery.min.js "></script>
+    <script src="/app/assets/js/amazeui.min.js "></script>
+    <script src="/app/assets/js/iscroll.js "></script>
+    <script src="/app/assets/js/app.js "></script>
 </body>
 
 </html>
