--- a/app/view/login.html
+++ b/app/view/login.html
@@ -1,17 +1,16 @@
-{% extends "layout.html" %} 
+{% extends "loginLayout.html" %} 
 {% block content %}
 
   <div class="am-g myapp-login">
 	<div class="myapp-login-logo-block  tpl-login-max">
 		<div class="myapp-login-logo-text">
 			<div class="myapp-login-logo-text">
-				Amaze UI<span> Login</span> <i class="am-icon-skyatlas"></i>
-				
+				各种玩<span> 各种爽</span> <i class="am-icon-moon-o"></i>
 			</div>
 		</div>
 
 		<div class="login-font">
-			<i>Log In </i> or <span> Sign Up</span>
+			<span> </span>
 		</div>
 		<div class="am-u-sm-10 login-am-center">
 			<form class="am-form">
