--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,4 +1,4 @@
-{% extends "layoutMain.html" %} {% block content %}
+{% extends "layout-main.html" %} {% block content %}
 
 
 <div class="tpl-content-wrapper">
