--- a/app/view/layout-main.html
+++ b/app/view/layout-main.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html>
 
 <head>
@@ -46,18 +47,13 @@
 
                 <li class="am-dropdown " data-am-dropdown data-am-dropdown-toggle>
                     <a class="am-dropdown-toggle tpl-header-list-link " href="javascript:; ">
-                        <span class="tpl-header-list-user-nick ">禁言小张</span>
+                        <span class="tpl-header-list-user-nick ">{{user_name}}</span>
                         <span class="tpl-header-list-user-ico ">
                              <img src="/app/assets/img/user01.png ">
                           </span>
                     </a>
-                    <ul class="am-dropdown-content ">
-                        <li><a href="# "><span class="am-icon-bell-o "></span> 资料</a></li>
-                        <li><a href="# "><span class="am-icon-cog "></span> 设置</a></li>
-                        <li><a href="# "><span class="am-icon-power-off "></span> 退出</a></li>
-                    </ul>
                 </li>
-                <li><a href="### " class="tpl-header-list-link "><span class="am-icon-sign-out tpl-header-list-ico-out-size "></span></a></li>
+                <li><a href="/login/logout" class="tpl-header-list-link "><span class="am-icon-sign-out tpl-header-list-ico-out-size "></span></a></li>
             </ul>
         </div>
     </header>
