--- a/app/view/login.html
+++ b/app/view/login.html
@@ -1,4 +1,4 @@
-{% extends "layoutLogin.html" %} {% block content %}
+{% extends "layout-login.html" %} {% block content %}
 
 <div class="am-g myapp-login">
     <div class="myapp-login-logo-block  tpl-login-max">
