--- a/app/view/index.html
+++ b/app/view/index.html
@@ -18,6 +18,7 @@
             </div>
             <div class="am-g">
                 <div class="tpl-table-images">
+                    {% for image in images%}
                     <div class="am-u-sm-12 am-u-md-6 am-u-lg-4">
                         <div class="tpl-table-images-content">
                             <div class="tpl-table-images-content-i-time">发布时间：2016-09-12</div>
@@ -25,16 +26,16 @@
                             <a href="javascript:;" class="tpl-table-images-content-i">
                                 <div class="tpl-table-images-content-i-info">
                                     <span class="ico">
-                                    <img src="/app/assets/img/user02.png" alt="">发布者
+                                    <img src="/app/assets/img/user01.png" alt="">发布者
                                  </span>
 
                                 </div>
                                 <span class="tpl-table-images-content-i-shadow"></span>
-                                <img src="/app/assets/img/a1.png" alt="">
+                                <img src="{{image.url}}" alt="">
                             </a>
                             <div class="tpl-table-images-content-block">
                                 <div class="tpl-i-font">
-                                    你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片。
+                                    {{image.description}}
                                 </div>
                                 <div class="am-btn-toolbar">
                                     <div class="am-btn-group am-btn-group-xs tpl-edit-content-btn">
@@ -45,141 +46,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="am-u-sm-12 am-u-md-6 am-u-lg-4">
-                        <div class="tpl-table-images-content">
-                            <div class="tpl-table-images-content-i-time">发布时间：2016-09-12</div>
-
-                            <a href="javascript:;" class="tpl-table-images-content-i">
-                                <div class="tpl-table-images-content-i-info">
-                                    <span class="ico">
-                                    <img src="/app/assets/img/user02.png" alt="">发布者
-                                 </span>
-
-                                </div>
-                                <span class="tpl-table-images-content-i-shadow"></span>
-                                <img src="/app/assets/img/a1.png" alt="">
-                            </a>
-                            <div class="tpl-table-images-content-block">
-                                <div class="tpl-i-font">
-                                    你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片。
-                                </div>
-                                <div class="am-btn-toolbar">
-                                    <div class="am-btn-group am-btn-group-xs tpl-edit-content-btn">
-                                        <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-edit"></span> 编辑</button>
-                                        <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="am-u-sm-12 am-u-md-6 am-u-lg-4">
-                        <div class="tpl-table-images-content">
-                            <div class="tpl-table-images-content-i-time">发布时间：2016-09-12</div>
-
-                            <a href="javascript:;" class="tpl-table-images-content-i">
-                                <div class="tpl-table-images-content-i-info">
-                                    <span class="ico">
-                                    <img src="/app/assets/img/user02.png" alt="">发布者
-                                 </span>
-
-                                </div>
-                                <span class="tpl-table-images-content-i-shadow"></span>
-                                <img src="/app/assets/img/a1.png" alt="">
-                            </a>
-                            <div class="tpl-table-images-content-block">
-                                <div class="tpl-i-font">
-                                    你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片。
-                                </div>
-                                <div class="am-btn-toolbar">
-                                    <div class="am-btn-group am-btn-group-xs tpl-edit-content-btn">
-                                        <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-edit"></span> 编辑</button>
-                                        <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="am-u-sm-12 am-u-md-6 am-u-lg-4">
-                        <div class="tpl-table-images-content">
-                            <div class="tpl-table-images-content-i-time">发布时间：2016-09-12</div>
-
-                            <a href="javascript:;" class="tpl-table-images-content-i">
-                                <div class="tpl-table-images-content-i-info">
-                                    <span class="ico">
-                                    <img src="/app/assets/img/user02.png" alt="">发布者
-                                 </span>
-
-                                </div>
-                                <span class="tpl-table-images-content-i-shadow"></span>
-                                <img src="/app/assets/img/a1.png" alt="">
-                            </a>
-                            <div class="tpl-table-images-content-block">
-                                <div class="tpl-i-font">
-                                    你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片。
-                                </div>
-                                <div class="am-btn-toolbar">
-                                    <div class="am-btn-group am-btn-group-xs tpl-edit-content-btn">
-                                        <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-edit"></span> 编辑</button>
-                                        <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="am-u-sm-12 am-u-md-6 am-u-lg-4">
-                        <div class="tpl-table-images-content">
-                            <div class="tpl-table-images-content-i-time">发布时间：2016-09-12</div>
-
-                            <a href="javascript:;" class="tpl-table-images-content-i">
-                                <div class="tpl-table-images-content-i-info">
-                                    <span class="ico">
-                                    <img src="/app/assets/img/user02.png" alt="">发布者
-                                 </span>
-
-                                </div>
-                                <span class="tpl-table-images-content-i-shadow"></span>
-                                <img src="/app/assets/img/a1.png" alt="">
-                            </a>
-                            <div class="tpl-table-images-content-block">
-                                <div class="tpl-i-font">
-                                    你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片。
-                                </div>
-                                <div class="am-btn-toolbar">
-                                    <div class="am-btn-group am-btn-group-xs tpl-edit-content-btn">
-                                        <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-edit"></span> 编辑</button>
-                                        <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="am-u-sm-12 am-u-md-6 am-u-lg-4">
-                        <div class="tpl-table-images-content">
-                            <div class="tpl-table-images-content-i-time">发布时间：2016-09-12</div>
-
-                            <a href="javascript:;" class="tpl-table-images-content-i">
-                                <div class="tpl-table-images-content-i-info">
-                                    <span class="ico">
-                                    <img src="/app/assets/img/user02.png" alt="">发布者
-                                 </span>
-
-                                </div>
-                                <span class="tpl-table-images-content-i-shadow"></span>
-                                <img src="/app/assets/img/a1.png" alt="">
-                            </a>
-                            <div class="tpl-table-images-content-block">
-                                <div class="tpl-i-font">
-                                    你最喜欢的艺术作品，告诉大家它们的------名图画，色彩，交织，撞色，线条雕塑装置当代古代现代作品的照片。
-                                </div>
-                                <div class="am-btn-toolbar">
-                                    <div class="am-btn-group am-btn-group-xs tpl-edit-content-btn">
-                                        <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-edit"></span> 编辑</button>
-                                        <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
 
                     <div class="am-u-lg-12">
                         <div class="am-cf">
@@ -204,12 +71,6 @@
         </div>
         <div class="tpl-alert"></div>
     </div>
-
-
-
-
-
-
 
 </div>
 
