--- a/app/view/index.html
+++ b/app/view/index.html
@@ -53,13 +53,11 @@
 
                             <div class="am-fr">
                                 <ul class="am-pagination tpl-pagination">
-                                    <li class="am-disabled"><a href="#">«</a></li>
-                                    <li class="am-active"><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li><a href="#">»</a></li>
+                                    {% for page in pageNav%}
+                                    <li class="{% if page.pageActive%}am-active {% endif %}">
+                                        <a href="{{page.url}}">{{page.num}}</a>
+                                    </li>
+                                    {% endfor %}
                                 </ul>
                             </div>
                         </div>
@@ -74,6 +72,8 @@
 
 </div>
 
+<script>
 
+</script>
 
 {% endblock %}
