light side menu

--- a/app/view/layout-main.html
+++ b/app/view/layout-main.html
@@ -65,9 +65,9 @@
             </div>
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
-                    {% for item in user_auth%}
+                    {% for item in user_auth %}
                     <li class="tpl-left-nav-item">
-                        <a href="/{{item.control}}/{{item.action}}" class="nav-link active">
+                        <a href="/{{item.control}}/{{item.action}}" class="nav-link">
                             <i class="am-icon-home"></i>
                             <span>{{item.text}}</span>
                         </a>
