--- a/app/view/index.html
+++ b/app/view/index.html
@@ -39,8 +39,8 @@
                                 </div>
                                 <div class="am-btn-toolbar">
                                     <div class="am-btn-group am-btn-group-xs tpl-edit-content-btn">
-                                        <button type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-edit"></span> 编辑</button>
-                                        <button type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</button>
+                                        <a href="/index/edit?id={{image.id}}" type="button" class="am-btn am-btn-default am-btn-secondary"><span class="am-icon-edit"></span> 编辑</a>
+                                        <a href="javascript:void(0)" onclick="deleteImage({{image.id}})" type="button" class="am-btn am-btn-default am-btn-danger"><span class="am-icon-trash-o"></span> 删除</a>
                                     </div>
                                 </div>
                             </div>
@@ -73,6 +73,14 @@
 </div>
 
 <script>
+    function deleteImage(id) {
+        var ok = confirm("确认删除？");
+        if (ok) {
+            $.get('/index/delete?id=' + id, function (res) {
+                window.location=window.location;
+            });
+        }
+    }
 
 </script>
 
