--- a/app/view/login.html
+++ b/app/view/login.html
@@ -4,7 +4,7 @@
     <div class="myapp-login-logo-block  tpl-login-max">
         <div class="myapp-login-logo-text">
             <div class="myapp-login-logo-text">
-                各种玩<span> 各种爽</span> <i class="am-icon-moon-o"></i>
+                Kinds <span> Play</span> <i class="am-icon-moon-o"></i>
             </div>
         </div>
 
