--- a/app/view/layout-main.html
+++ b/app/view/layout-main.html
@@ -29,7 +29,7 @@
                     <img src="/app/assets/img/moon_72px_1206584_easyicon.net.png">
                 </span>
                 <span>
-                     Kinds Play
+                     AAAAAA
                 </span>
             </a>
 
@@ -61,7 +61,8 @@
 
         <div class="tpl-left-nav tpl-left-nav-hover">
             <div class="tpl-left-nav-title">
-                KindsPlay列表
+                Album
+
             </div>
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
@@ -70,6 +71,7 @@
                         <a href="/{{item.control}}/{{item.action}}" class="nav-link">
                             <i class="am-icon-home"></i>
                             <span>{{item.text}}</span>
+                            
                         </a>
                     </li>
                     {% endfor %}
