--- a/app/view/login.html
+++ b/app/view/login.html
@@ -15,12 +15,12 @@
             <form class="am-form" action="/login/login" method="post">
                 <fieldset>
                     <div class="am-form-group">
-                        <input type="text" name="name" class="" id="doc-ipt-email-1" placeholder="请输入用户名">
+                        <input type="text" name="name" class="" id="doc-ipt-email-1" placeholder="Please input your username">
                     </div>
                     <div class="am-form-group">
-                        <input type="password" name="password" class="" id="doc-ipt-pwd-1" placeholder="设置个密码吧">
+                        <input type="password" name="password" class="" id="doc-ipt-pwd-1" placeholder="Please input your password">
                     </div>
-                    <p><button type="submit" class="am-btn am-btn-default">登录</button></p>
+                    <p><button type="submit" class="am-btn am-btn-default">Login</button></p>
                 </fieldset>
             </form>
         </div>
