--- a/app/view/login.html
+++ b/app/view/login.html
@@ -21,6 +21,9 @@
                         <input type="password" name="password" class="" id="doc-ipt-pwd-1" placeholder="Please input your password">
                     </div>
                     <p><button type="submit" class="am-btn am-btn-default">Login</button></p>
+                    <div class="am-form-group">
+                        <a href="/login/register">Regeist</a>
+                    </div>
                 </fieldset>
             </form>
         </div>
