--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,8 +9,7 @@
                 <div class="am-u-sm-12 am-u-md-6">
                     <div class="am-btn-toolbar">
                         <div class="am-btn-group am-btn-group-xs">
-                            <a type="button" class="am-btn am-btn-default am-btn-success" href="/index/add"><span class="am-icon-plus"></span> 新增</a>
-                            <a type="button" class="am-btn"><span class="am-icon-plus"> 新增</span></a>
+                            <a type="button" class="am-btn am-btn-default am-btn-success" href="/index/add"><span class="am-icon-plus"></span> New Photo</a>
                         </div>
                     </div>
                 </div>
