--- a/app/view/layout-main.html
+++ b/app/view/layout-main.html
@@ -62,7 +62,7 @@
         <div class="tpl-left-nav tpl-left-nav-hover">
             <div class="tpl-left-nav-title">
                 Album
-
+                <a type="button" href="/index/galleryAdd" class="tpl-add-btn"><span class="am-icon-plus">  New Album</span></a>
             </div>
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
