--- a/app/view/album-add.html
+++ b/app/view/album-add.html
@@ -5,7 +5,7 @@
         <div class="tpl-block">
             <div class="am-g">
                 <div class="tpl-form-body tpl-form-line">
-                    <form action="/index/galleryUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
+                    <form action="/index/albumUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
                         <div class="am-form-group">
                             <label for="user-email" class="am-u-sm-3 am-form-label">Gallery Name</label>
                             <div class="am-u-sm-9">
