--- a/app/view/index-add.html
+++ b/app/view/index-add.html
@@ -35,7 +35,7 @@
                                 <small>发布时间为必填</small>
                             </div>
                         </div>
-
+                        <input id="album_id" name="album_id" type="text" style="display:none">
                         <div class="am-form-group">
                             <div class="am-u-sm-9 am-u-sm-push-3">
                                 <input type="submit" class="am-btn am-btn-primary tpl-btn-bg-color-success"></input>
@@ -50,6 +50,9 @@
     </div>
 </div>
 
+
+{% endblock %}{% block javascript %}
+
 <script type="text/javascript">
     (function () {
         if (location.pathname.indexOf('edit') > 0) {
@@ -59,6 +62,7 @@
             document.getElementById('img-time').value = '{{image.name}}';
 
         }
+        document.getElementById('album_id').value = urlUtil.getQueryValue('album_id');
     })();
 
 
@@ -78,5 +82,6 @@
     }
 
 </script>
+
 
 {% endblock %}
