--- a/app/view/layout-login.html
+++ b/app/view/layout-login.html
@@ -25,6 +25,7 @@
     <script src="/app/assets/js/jquery.min.js"></script>
     <script src="/app/assets/js/amazeui.min.js"></script>
     <script src="/app/assets/js/app.js"></script>
+    {% block javascript %} {% endblock %}
 </body>
 
 </html>
